# frinx-workers-boilerplate

./: .gitignore  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: pr_code_check.yaml
app/workers/: boilerplate_worker.py
app/workflows/: boilerplate_workflow.py
config/: env_local.template
docker-build/: Dockerfile  build.sh
helm-charts/custom-worker/: Chart.yaml  values.yaml
helm-charts/frinx-machine/: Chart.yaml  values.yaml
helm-charts/sample-topology/: Chart.yaml  values.yaml
worker/: .env_local  build.sh  main.py  pyproject.toml
worker/devices/: cli_device_data.csv  cli_device_import.py  import_devices.py
worker/dockerfiles/: Dockerfile
worker/services/l2_vpn_ptp_oc/: README.md  pyproject.toml
worker/services/l2_vpn_ptp_oc/l2_vpn_ptp_oc/: create_l2vpn_p2p_oc_uniconfig.py
worker/services/loopback_interface/: README.md  pyproject.toml
worker/services/loopback_interface/loopback_interface/: loopback_interface_uniconfig.py
