[tool.poetry]
name = "frinx-demo-workflows"
version = "6.1.0"
description = ""
authors = ["Jozef Volak <jvolak@frinx.io>"]
readme = "README.md"
packages = [
    {include = "devices"},
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
frinx-inventory-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "inventory/python"}
frinx-schellar-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "schellar/python"}
frinx-uniconfig-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "uniconfig/python"}
frinx-resource-manager-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "resource-manager/python"}
frinx-topology-discovery-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "topology-discovery/python"}
frinx-http-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "misc/python/http"}
frinx-kafka-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "misc/python/kafka"}
frinx-influxdb-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "misc/python/influxdb"}
frinx-conductor-system-test-worker = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "misc/python/conductor-system-test"}
frinx-python-lambda = {git = "ssh://git@github.com/FRINXio/frinx-services-python-workers.git", branch = "6.1.0", subdirectory = "misc/python/python-lambda"}

l2-vpn-ptp-oc = {path = "services/l2_vpn_ptp_oc"}
loopback-interface = {path = "services/loopback_interface"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
